--- a/public/assets/custom/css/layout.css
+++ b/public/assets/custom/css/layout.css
@@ -1,7 +1,3 @@
-body {
-    font-size: 12px !important;
-}
-
 /* =========================== BEGIN NECESSARY STYLES =========================== */
 .display-none {
     display: none !important;
@@ -9,6 +5,10 @@ body {
 
 .mr-10 {
     margin-right: 10px !important;
+}
+
+.mt-20 {
+    margin-top: 20px !important;
 }
 
 .text-right {
@@ -25,10 +25,14 @@ body {
 /* ============================== END COLOR STYLES ============================== */
 
 /* ========================= BEGIN CUSTOM BUTTON STYLES ========================== */
+.btn {
+    border-radius: 5px !important;
+}
+
 .btn-c-primary {
     color: #FFFFFF;
     background-color: #3699FF;
-    border-radius: 2px !important;
+    border-radius: 5px !important;
 }
 
 .btn-c-primary:hover {
@@ -41,10 +45,22 @@ body {
     background-color: #3288e1;
 }
 
+.btn-c-info {
+    color: #FFFFFF;
+    background-color: #2BC5BD;
+    border-radius: 5px !important;
+}
+
+.btn-c-danger {
+    color: #FFFFFF;
+    background-color: #BB0000;
+    border-radius: 5px !important;
+}
+
 .btn-c-grey {
     color: #FFFFFF;
     background-color: #7E8C9C;
-    border-radius: 2px !important;
+    border-radius: 5px !important;
 }
 
 .btn-c-no-border-primary {
@@ -59,14 +75,21 @@ body {
 /* ========================= BEGIN CUSTOM BUTTON STYLES ========================== */
 .label-active {
     color: #FFFFFF;
-    background-color: #3699FF;
-    border-radius: 2px !important;
+    background-color: #3797FC;
+    border-radius: 5px !important;
     padding: 2px 6px !important;
 }
 
 .label-inactive {
     color: #FFFFFF;
     background-color: #7E8C9C;
+    border-radius: 5px !important;
+    padding: 2px 6px !important;
+}
+
+.label-info {
+    color: #FFFFFF;
+    background-color: #32C5D2;
     border-radius: 2px !important;
     padding: 2px 6px !important;
 }
@@ -83,9 +106,39 @@ body {
 
 /* ========================== END CUSTOM BUTTON STYLES =========================== */
 
+/* ============================== BEGIN SIDEBAR STYLES ============================= */
+.page-sidebar-menu .nav-item .title {
+    font-size: 12px !important;
+}
+
+/* =============================== END SIDEBAR STYLES ============================== */
+
 /* ======================= BEGIN DEFAULT COMPONENT STYLES ======================== */
 body {
     background-color: #0C243C !important;
+}
+
+.table td,
+.table th,
+span,
+button,
+input,
+select,
+div,
+i,
+label,
+a {
+    font-size: 10px !important;
+    font-weight: 600 !important;
+}
+
+i {
+    font-size: 8px !important;
+}
+
+.col-md-12 {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .page-logo {
@@ -146,11 +199,29 @@ body {
     background-color: #C9D1D5 !important;
 }
 
-.page-breadcrumb>li>a {
-    font-weight: 600;
+/* ========================= END DEFAULT COMPONENT STYLES ========================== */
+
+/* ============================ BEGIN BREADCRUMB STYLES ============================ */
+.page-breadcrumb li {
+    margin-right: 20px;
 }
 
-/* ========================= END DEFAULT COMPONENT STYLES ========================== */
+.page-breadcrumb li a {
+    color: #0C243C;
+    font-weight: bold;
+}
+
+.page-breadcrumb li a.bread-active {
+    color: #3699FF !important;
+}
+
+
+#panel-employee-list .dataTable tbody td:last-child {
+    display: inline-flex;
+    column-gap: 3px;
+}
+
+/* ============================= END BREADCRUMB STYLES ============================= */
 
 /* ============================ BEGIN AJAX TABLE STYLES ============================ */
 .tbl-ajax-tools {
@@ -188,23 +259,51 @@ body {
     vertical-align: middle !important;
 }
 
-.dataTable tbody td:last-child {
-    /* display: inline-flex; */
-    /* column-gap: 3px; */
+.dataTable .label-primary {
+    color: #FFFFFF;
+    background-color: #3797FC;
+    border-radius: 5px !important;
+    padding: 4px 6px !important;
+    width: 60px !important;
+    display: inline-table !important;
+}
+
+.dataTable .label-info {
+    color: #FFFFFF;
+    background-color: #32C5D2;
+    border-radius: 5px !important;
+    padding: 4px 6px !important;
+    width: 60px !important;
+    display: inline-table !important;
+}
+
+.dataTable .label-grey {
+    color: #FFFFFF;
+    background-color: #7E8C9C;
+    border-radius: 5px !important;
+    padding: 4px 6px !important;
+    width: 60px !important;
+    display: inline-table !important;
+}
+
+.dataTable td {
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
 }
 
 /* ============================= END AJAX TABLE STYLES ============================= */
 
 /* ============================ BEGIN AJAX TABLE STYLES ============================ */
+
 .form-body .form-group label {
-    /* font-size: 13px !important; */
+    font-size: 12px !important;
     font-weight: 600 !important;
     color: #7E8C9C;
 }
 
 .form-body .form-group input {
-    border-radius: 2px !important;
-    height: 26px !important;
+    border-radius: 5px;
+    height: 24px !important;
     border: 1px solid #C9D1D5 !important;
     padding: 1px 12px;
 }
@@ -215,20 +314,38 @@ body {
 }
 
 .form-body .form-group select {
-    border-radius: 2px !important;
+    border-radius: 5px !important;
     height: 26px !important;
     border: 1px solid #C9D1D5 !important;
     padding: 1px 12px;
 }
 
-.form-group .date-picker .input-group-btn .btn.default {
+.form-control {
+    border-radius: 5px !important;
+}
+
+.form-group .input-group-btn .btn {
     padding: 1.9px 8px;
+    border-color: #e1e5ec;
+    border: 1px solid #C9D1D5 !important;
+    background: white !important;
+}
+
+.input-group .form-control {
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+}
+
+.input-group .input-group-btn .btn {
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+}
+
+.input-sm {
+    height: 24px;
 }
 
 /* ============================= END AJAX TABLE STYLES ============================= */
-
-
-
 
 /* ============================ Begin Tab sytles ==================================*/
 .caption-helper:hover {
