--- a/public/assets/custom/css/layout.css
+++ b/public/assets/custom/css/layout.css
@@ -11,6 +11,14 @@
     margin-right: 10px !important;
 }
 
+.mr-30 {
+    margin-right: 30px !important;
+}
+
+.ml-30 {
+    margin-left: 30px !important;
+}
+
 .mt-0 {
     margin-top: 0px !important;
 }
