--- a/public/assets/custom/css/layout.css
+++ b/public/assets/custom/css/layout.css
@@ -39,12 +39,26 @@
     margin-bottom: 10px !important;
 }
 
+.ml-10 {
+    margin-left: 10px !important;
+}
+
 .text-right {
     text-align: right !important;
 }
 
 .float-right {
     float: right !important;
+}
+
+.width-webkit-fill {
+    width: -webkit-fill-available !important;
+}
+
+.inline-flex-center {
+    display: inline-flex !important;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ============================ END NECESSARY STYLES ============================ */
@@ -172,6 +186,10 @@ h4.section-head {
 
 .page-sidebar .page-sidebar-menu>li.open>a {
     background: #3e4b5c !important;
+}
+
+.page-sidebar .page-sidebar-menu>li.active>a>i {
+    color: #0C243c !important;
 }
 
 /* =============================== END SIDEBAR STYLES ============================== */
@@ -306,6 +324,10 @@ hr {
 
 .page-bar .page-toolbar {
     padding: 8px 0 6px !important;
+}
+
+.page-bar .page-toolbar .dropdown-menu i {
+    font-size: 12px !important;
 }
 
 
