--- a/public/assets/custom/css/employee.css
+++ b/public/assets/custom/css/employee.css
@@ -1,18 +1,8 @@
 /* =========================== BEGIN ADD EMPLOYEE STYLES =========================== */
 
-
-#panel-create-employee .section-action {
-    margin-top: 15px;
-    text-align: right;
-}
-
 #panel-create-employee .btn-tbl-action {
     text-decoration: none;
     margin-left: 3px;
-}
-
-#panel-create-employee .btn-tbl-action i {
-    font-size: 16px !important;
 }
 
 #panel-create-employee .doc-label {
@@ -23,6 +13,28 @@
 }
 
 /* ============================ END ADD EMPLOYEE STYLES ============================ */
+
+/* =========================== BEGIN VIEW EMPLOYEE STYLES =========================== */
+#panel-view-employee .doc-label {
+    color: black !important;
+    margin-top: 17px;
+    margin-left: 17px;
+    font-weight: 600 !important;
+}
+
+#panel-view-employee #tbl_view_placements tbody tr:last-child {
+    background-color: #DEDEDE;
+}
+
+#panel-view-employee #tbl_view_placements tbody tr:last-child td {
+    font-weight: bold !important;
+}
+
+#panel-view-employee #tbl_view_placements tbody tr:last-child .sorting_1 {
+    background-color: #DEDEDE !important;
+}
+
+/* ============================ END VIEW EMPLOYEE STYLES ============================ */
 
 /* =========================== BEGIN ADD REQUEST STYLES =========================== */
 #panel-create-request .req-add-section-header {
