employee API beta version

--- a/public/assets/custom/css/employee.css
+++ b/public/assets/custom/css/employee.css
@@ -92,3 +92,8 @@
 }
 
 /* =============================== END IMPORT STYLES =============================== */
+
+
+.star-active {
+    color: rgba(255, 187, 0, 0.918) !important;
+}
